Set body to grid, aligned dashboard correctly

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -9,12 +10,17 @@ body {
  background: lightgray;
  color: black;
  -webkit-font-smoothing: antialiased;
+
+ display: grid;
+ grid-template-columns: 1fr, 1fr;
 }
 
 body, input, button {
  font-size: 1rem;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/* Page-Wide Elements */
 
 button {
  cursor: pointer;
@@ -28,15 +34,22 @@ button {
   height: 50px;
 }
 
+/* Header */
+
 header {
   background-color: white;
+
+  grid-column: 2 / 3;
 }
 
 /* Dashboard */
 
 #sidebar {
-  background-color: rgb(49, 141, 177);
+  background-color: rgb(3, 150, 208);
   color: white;
+
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
 }
 
 #sidebar img {
@@ -44,6 +57,9 @@ header {
 }
 
 /* Main */
+main {
+  grid-column: 2 / 3;
+}
 
 /* Projects */
 .projects__card {
